--- a/insertion.html
+++ b/insertion.html
@@ -65,26 +65,18 @@
             </div>
         </div>
     </div>
-    <div class="shadow p-4 m-4  bg-gray-150" style="position: relative; bottom: 0;min-width: 100vh;min-height: 69vh;">
+    <div class="shadow p-4 m-4  bg-gray-150" style="position: relative; bottom: 0;min-width: 100vh;min-height:40vh;">
         <div class="mother absolute bottom-0" style="border-bottom: 5px solid black;">
 
         </div>
     </div>
-    <div class="bg-green-200 shadow p-4 m-4">
-        <div id="change-val text-bold">
-            <h2 class="font-bold">Currently Min Value <span id="minValue"></span> </h2>
-            <span id="checkSection">If ()</span>
-            <div id="resultSection">
-
-            </div>
-        </div>
-    </div>
+   
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-    <script src="/selection.js"></script>
+    <script src="/insertion.js"></script>
 </body>
 
 </html>
