--- a/UI/Pages/home.html
+++ b/UI/Pages/home.html
@@ -169,8 +169,8 @@
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../js/mixitup.min.js"></script>
+    <script src="../js/custom.js"></script>
     <script>
       var containerEl = document.querySelector(".mix-container");
 
