--- a/UI/Pages/home.html
+++ b/UI/Pages/home.html
@@ -87,10 +87,16 @@
             <button type="button" class="control" data-filter=".sorting">
               Sorting
             </button>
-            <button type="button" class="control" data-filter=".portrait">
+            <button type="button" class="control" data-filter=".graph-travarsal">
+              Graph Travarsal
+            </button>
+            <button type="button" class="control" data-filter=".path-finding">
+              Path Finding
+            </button>
+            <button type="button" class="control" data-filter=".data-structure">
               Data Structure
             </button>
-            <button type="button" class="control" data-filter=".product">
+            <button type="button" class="control" data-filter=".geometry">
               Geometry
             </button>
           </div>
@@ -99,37 +105,116 @@
         <div class="row">
           <div class="fw mix-container home-main">
             <div class="mix sorting">
-              <a href="./Inserttion/Insertion.html" class="thumb-a">
+              <a href="/Algorithm-visualization/insertion.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Insertion Sorting Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="https://cdn.programiz.com/cdn/farfuture/9NUd-kGc4jNsupP0gMAKe4QpsaZCmrGz5ZOYZz4Kn6U/mtime:1620042106/sites/tutorial2program/files/sorting.png" alt="" />
+                  <img src="../Images/sortingAlgorithm/insertionSort.jpg" alt="" />
                 </div>
               </a>
             </div>
-            <div class="mix portrait product">
-              <a href="./Selection/Selection.html" class="thumb-a">
+            <div class="mix sorting">
+              <a href="/Algorithm-visualization/selection.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Selection Sorting Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="https://cdn.programiz.com/cdn/farfuture/9NUd-kGc4jNsupP0gMAKe4QpsaZCmrGz5ZOYZz4Kn6U/mtime:1620042106/sites/tutorial2program/files/sorting.png" alt="" />
+                  <img src="../Images/sortingAlgorithm/selectionsort.jpg" alt="" />
                 </div>
               </a>
             </div>
-            <div class="mix product">
-              <a href="#" class="thumb-a">
+            <div class="mix sorting">
+              <a href="./Selection/Selection.html" class="thumb-a">
                 <div class="item-hover">
-                  <div class="hover-text"><h3>Path Finding</h3></div>
+                  <div class="hover-text"><h3>Merge Sort Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="https://cdn.programiz.com/cdn/farfuture/9NUd-kGc4jNsupP0gMAKe4QpsaZCmrGz5ZOYZz4Kn6U/mtime:1620042106/sites/tutorial2program/files/sorting.png" alt="" />
+                  <img src="../Images/sortingAlgorithm//mergeSort.jpg" alt="" />
                 </div>
               </a>
             </div>
-            
-          </div>
+            <div class="mix sorting">
+              <a href="./Selection/Selection.html" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Quick Sort Algorithm</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/sortingAlgorithm/quicksort.jpg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix sorting">
+              <a href="./Selection/Selection.html" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Bubble Sort Algorithm</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/sortingAlgorithm/bubblesort.jpg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix data-structure">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Stack Algorithm</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/dataStructure/stack.jpeg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix data-structure">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Qeue Algorithm</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/dataStructure/queue.jpg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix graph-travarsal">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Bfs</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/graphtravarsal/bfs.png" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix graph-travarsal">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Dfs</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/graphtravarsal/dfs.jpg" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix path-finding">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>Shortest Path algorithm</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/pathfinding/sssp.png" alt="" />
+                </div>
+              </a>
+            </div>
+            <div class="mix geometry">
+              <a href="#" class="thumb-a">
+                <div class="item-hover">
+                  <div class="hover-text"><h3>convex hall</h3></div>
+                </div>
+                <div class="item-img">
+                  <img src="../Images/graphtravarsal/dfs.jpg" alt="" />
+                </div>
+              </a>
+            </div>
+            </div>
           </div>
         </div>
       </div>
