--- a/graph/graph.html
+++ b/graph/graph.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div id="container"></div>
-    <script type="text/javascript" src="./js/buildGraph.js"></script>
-    <script type="text/javascript" src="./js/visualizeGraphAlog.js"></script>
+    <script type="text/javascript" src="../js/buildGraph.js"></script>
+    <script type="text/javascript" src="../js/visualizeGraphAlog.js"></script>
     <script type="text/javascript">
       let graphInfob = {
         edgeColor: "#548694",
