--- a/graph/grid.html
+++ b/graph/grid.html
@@ -65,7 +65,7 @@
     isBfs = true;
     isDfs = false;
     isRunning = false;
-    grid.bfsUntilEnd("yellow");
+    grid.bfsUntilEnd("blue");
    }
       
       
