--- a/UI/Pages/about.html
+++ b/UI/Pages/about.html
@@ -26,6 +26,7 @@
       integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
@@ -63,6 +64,97 @@
         </div>
       </nav>
     </header>
+    <div class="main pt-32">
+      <section class="about-us pb-60">
+        <div class="container mx-auto px-6 md:px-12 lg:px-8">
+          <div class="text-center mb-12 space-y-4">
+            <h1 class="text-4xl font-bold md:text-5xl">About The Project</h1>
+            <p class="lg:w-8/12 lg:mx-auto">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse a
+              molestiae voluptates iure laborum. Debitis commodi molestias ea
+              architecto tempore voluptatem corrupti eaque delectus iusto iure
+              asperiores voluptates temporibus cupiditate, eveniet reiciendis
+              exercitationem ratione expedita tempora laboriosam ipsam assumenda
+              repellendus! Distinctio quisquam hic voluptatibus saepe modi esse
+              excepturi et maiores!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container mx-auto px-6 md:px-12 lg:px-8">
+          <div class="text-center mb-2">
+            <h1 class="text-4xl font-bold md:text-5xl py-4">The team</h1>
+          </div>
+          <div class="py-20 grid gap-28 md:gap-12 md:grid-cols-3">
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
+                  alt="joy picture"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">Joy Sarkar</h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
+                  alt="joy picture"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">
+                  Mazharul Haque
+                </h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
+                  alt="joy picture"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">
+                  Kamrunnahar Somapti
+                </h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <footer>
       <div class="container-fluid">
