--- a/UI/Pages/home.html
+++ b/UI/Pages/home.html
@@ -16,7 +16,7 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+      integrity=""
       crossorigin="anonymous"
     />
     <link
