--- a/UI/Pages/about.html
+++ b/UI/Pages/about.html
@@ -68,15 +68,19 @@
       <section class="about-us pb-60">
         <div class="container mx-auto px-6 md:px-12 lg:px-8">
           <div class="text-center mb-12 space-y-4">
-            <h1 class="text-4xl font-bold md:text-5xl">About The Project</h1>
+            <h1 class="text-4xl font-bold md:text-5xl">
+              About ProjectDaVisualizer
+            </h1>
             <p class="lg:w-8/12 lg:mx-auto">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse a
-              molestiae voluptates iure laborum. Debitis commodi molestias ea
-              architecto tempore voluptatem corrupti eaque delectus iusto iure
-              asperiores voluptates temporibus cupiditate, eveniet reiciendis
-              exercitationem ratione expedita tempora laboriosam ipsam assumenda
-              repellendus! Distinctio quisquam hic voluptatibus saepe modi esse
-              excepturi et maiores!
+              Data structures and algorithms are generally considered two of the
+              hardest topics to learn in computer science. But at the same time,
+              these two are fundamental courses in computer science also. So
+              every student should have clear idea and knowledge about data
+              structure and algorithm. Our attempt is to develop a user-friendly
+              visualization tool that visually depicts the processes of
+              algorithms and actions. In this paper, we present a web-based
+              algorithm visualization tool, ProjectDaVisualizer (PDA), that does
+              not require the installation of any additional software
             </p>
           </div>
         </div>
@@ -92,8 +96,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
-                  alt="joy picture"
+                  src="../Images/aboutUs/joy.jpg"
                   loading="lazy"
                   width="640"
                   height="805"
@@ -112,7 +115,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
+                  src="../Images/aboutUs/Mazharul.jpg"
                   alt="joy picture"
                   loading="lazy"
                   width="640"
@@ -134,7 +137,7 @@
                 class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
               >
                 <img
-                  src="https://scontent.fdac116-1.fna.fbcdn.net/v/t39.30808-6/270940841_4612399982210632_747514997663577029_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFcC53MeaD80HfJHoMUARVRZTszZ_9cSsdlOzNn_1xKx4lhAZbT0k_Q6anfFR97fMcQ-SVoJbajBt0Ugpjltsgx&_nc_ohc=C7AkesvOxU0AX8ouxsI&_nc_ht=scontent.fdac116-1.fna&oh=00_AT-l6_aa3NkJmmNe8boDX8NHaejbJJsZNZFoHP0BMlwCxA&oe=62FB6EF6"
+                  src="../Images/aboutUs/Somapti.jpg"
                   alt="joy picture"
                   loading="lazy"
                   width="640"
