--- a/UI/Pages/about.html
+++ b/UI/Pages/about.html
@@ -68,7 +68,7 @@
       <section class="about-us pb-60">
         <div class="container mx-auto px-6 md:px-12 lg:px-8">
           <div class="text-center mb-12 space-y-4">
-            <h1 class="text-4xl font-bold md:text-5xl">
+            <h1 class="text-4xl font-bold md:text-5xl py-4">
               About ProjectDaVisualizer
             </h1>
             <p class="lg:w-8/12 lg:mx-auto">
