About Page and Other link fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header class="container-fluid vs-container">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="home.html">ProjectDaVisualizer</a>
+        <a class="navbar-brand" href="index.html">ProjectDaVisualizer</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarDefault">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="home.html"
+              <a class="nav-link" href="index.html"
                 >HOME <span class="sr-only">(current)</span></a
               >
             </li>
@@ -124,7 +124,7 @@
                 </div>
               </a>
             </div>
-            <div class="mix sorting">
+           <!-- <div class="mix sorting">
               <a href="./Selection/Selection.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Merge Sort Algorithm</h3></div>
@@ -133,8 +133,8 @@
                   <img src="../Images/sortingAlgorithm//mergeSort.jpg" alt="" />
                 </div>
               </a>
-            </div>
-            <div class="mix sorting">
+            </div>-->
+         <!--   <div class="mix sorting">
               <a href="./Selection/Selection.html" class="thumb-a">
                 <div class="item-hover">
                   <div class="hover-text"><h3>Quick Sort Algorithm</h3></div>
@@ -143,7 +143,7 @@
                   <img src="../Images/sortingAlgorithm/quicksort.jpg" alt="" />
                 </div>
               </a>
-            </div>
+            </div>-->
             <div class="mix sorting">
               <a href="./Selection/Selection.html" class="thumb-a">
                 <div class="item-hover">
