Refactored Stack with style

--- a/data Structure/stack/visualStackQueue.html
+++ b/data Structure/stack/visualStackQueue.html
@@ -10,7 +10,9 @@
       <div id="container">
         <!-- ======= This is Canvas area ========= -->
         <div id="canvas" class="box box-full">
-          <h2 style="text-align: left">Implementation of stack using array</h2>
+          <h1 style="text-align: center; color: #000000">
+            Implementation of stack using array
+          </h1>
 
           <!-- Canvas Element to draw Animations -->
           <div id="canvas-wrapper">
@@ -24,7 +26,9 @@
                 style="
                   position: relative;
                   display: block;
-                  font-size: 16px;
+                  font-size: 20px;
+                  font-weight: bold;
+                  color: #000000;
                   margin: 10px 250px;
                 "
                 >Array</span
@@ -36,7 +40,9 @@
                     style="
                       position: relative;
                       display: block;
-                      font-size: 16px;
+                      font-weight: bold;
+                      color: #000000;
+                      font-size: 20px;
                       margin: 10px 70px;
                     "
                     >Stack</span
@@ -64,7 +70,7 @@
         <div id="container">
           <!-- Form Inputs -->
           <div class="inputs">
-            <h2 style="text-align: center; color: #ffd000; padding-top: 5px">
+            <h2 style="text-align: center; color: #000000; padding-top: 5px">
               Enter the values to perform Stack Operations
             </h2>
             <!-- ====== pushing element ====== -->
@@ -115,7 +121,7 @@
               />
             </div>
 
-            <div class="form-row">
+            <!--<div class="form-row">
               <input
                 type="button"
                 id="pop-front-item"
@@ -123,7 +129,7 @@
                 value="Pop_front"
                 class="btn btn-red"
               />
-            </div>
+            </div>-->
           </div>
         </div>
         <!-- =============== draggable box ends here ============ -->
@@ -138,9 +144,9 @@
     ></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 
-    <script src="/stack/container.js"></script>
-    <script src="/stack/operationExplaination.js"></script>
+    <script src="../stack/container.js"></script>
+    <script src="../stack/operationExplaination.js"></script>
 
-    <script src="/stack/stack.js"></script>
+    <script src="../stack/stack.js"></script>
   </body>
 </html>
