--- a/UI/Pages/about.html
+++ b/UI/Pages/about.html
@@ -57,9 +57,9 @@
                 >ABOUT Us <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">CONTACT</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </nav>
