--- a/UI/Pages/home.html
+++ b/UI/Pages/home.html
@@ -56,9 +56,9 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">ABOUT Us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="contact.html">CONTACT</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </nav>
