--- a/about.html
+++ b/about.html
@@ -1,102 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta
-          name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no"
-  />
-  <title>ProjectDaVisualizer</title>
-  <meta name="description" content="ProjectDaVisualizer/team Portolio" />
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>ProjectDaVisualizer</title>
+    <meta name="description" content="ProjectDaVisualizer/team Portolio" />
 
-  <link
-          href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700"
-          rel="stylesheet"
-  />
-  <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-          integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-          crossorigin="anonymous"
-  />
-  <link
-          rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
-          integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
-          crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="../CSS/style.css" />
-</head>
-<body>
-<header class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">ProjectDaVisualizer</a>
-    <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarDefault"
-            aria-controls="navbarDefault"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-    >
-      <span class="icon-bar i1"></span>
-      <span class="icon-bar i2"></span>
-      <span class="icon-bar i3"></span>
-    </button>
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+      integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+      crossorigin="anonymous"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./CSS/style.css" />
+  </head>
+  <body>
+    <header class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="home.html">ProjectDaVisualizer</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarDefault"
+          aria-controls="navbarDefault"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="icon-bar i1"></span>
+          <span class="icon-bar i2"></span>
+          <span class="icon-bar i3"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarDefault">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">HOME </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="about.html"
-          >ABOUT Us <span class="sr-only">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">CONTACT</a>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarDefault">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">HOME </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="about.html"
+                >ABOUT Us <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="contact.html">CONTACT</a>
+            </li> -->
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div class="main pt-32">
+      <section class="about-us pb-60">
+        <div class="container mx-auto px-6 md:px-12 lg:px-8">
+          <div class="text-center mb-12 space-y-4">
+            <h1 class="text-4xl font-bold md:text-5xl py-4">
+              About ProjectDaVisualizer
+            </h1>
+            <p class="lg:w-8/12 lg:mx-auto">
+              Data structures and algorithms are generally considered two of the
+              hardest topics to learn in computer science. But at the same time,
+              these two are fundamental courses in computer science also. So
+              every student should have clear idea and knowledge about data
+              structure and algorithm. Our attempt is to develop a user-friendly
+              visualization tool that visually depicts the processes of
+              algorithms and actions. In this paper, we present a web-based
+              algorithm visualization tool, ProjectDaVisualizer (PDA), that does
+              not require the installation of any additional software
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container mx-auto px-6 md:px-12 lg:px-8">
+          <div class="text-center mb-2">
+            <h1 class="text-4xl font-bold md:text-5xl py-4">The team</h1>
+          </div>
+          <div class="py-20 grid gap-28 md:gap-12 md:grid-cols-3">
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="./Images/aboutUs/joy.jpg"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">Joy Sarkar</h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="./Images/aboutUs/Mazharul.jpg"
+                  alt="joy picture"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">
+                  Mazharul Haque
+                </h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+            <div class="border-t-4 space-y-8 group text-center">
+              <div
+                class="w-32 h-32 -mt-16 mx-auto rounded-[2rem] rotate-45 overflow-hidden"
+              >
+                <img
+                  src="./Images/aboutus/Somapti.jpg"
+                  alt="joy picture"
+                  loading="lazy"
+                  width="640"
+                  height="805"
+                  class="f-full h-full object-cover -rotate-45 scale-125 mx-auto transition transition-duration-300 group-hover:scale-[1.4]"
+                />
+              </div>
+              <div class="text-center">
+                <h5 class="text-xl text-gray-800 font-semibold">
+                  Kamrunnahar Somapti
+                </h5>
+              </div>
+              <a href="#" class="block w-max mx-auto text-center text-black-500"
+                >view bio</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-  </nav>
-</header>
 
-<footer>
-  <div class="container-fluid">
-    <div class="footer-info">
-      <div class="footer-title">
-        <h2>ProjectDaVisualizer</h2>
-        <p>© 2022 Copyright: Team ProjectDaVisualizer</p>
+    <footer>
+      <div class="container-fluid">
+        <div class="footer-info">
+          <div class="footer-title">
+            <h2>ProjectDaVisualizer</h2>
+            <p>© 2022 Copyright: Team ProjectDaVisualizer</p>
+          </div>
+          <div class="footer-social">
+            <a href=""><span>About</span></a>
+            <a href=""><span>Team</span></a>
+            <a href=""><span>Terms of use</span></a>
+            <a href=""><span>Privacy Policy</span></a>
+          </div>
+        </div>
       </div>
-      <div class="footer-social">
-        <a href=""><span>About</span></a>
-        <a href=""><span>Team</span></a>
-        <a href=""><span>Terms of use</span></a>
-        <a href=""><span>Privacy Policy</span></a>
-      </div>
-    </div>
-  </div>
-</footer>
+    </footer>
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
-        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-        crossorigin="anonymous"
-></script>
-<script src="js/custom.js"></script>
-</body>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
