--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <header class="container-fluid vs-container">
@@ -55,9 +55,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">ABOUT Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -110,7 +107,7 @@
                   <div class="hover-text"><h3>Insertion Sorting Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/sortingAlgorithm/insertionSort.jpg" alt="" />
+                  <img src="./Images/sortingAlgorithm/insertionSort.jpg" alt="Insertion Sort" />
                 </div>
               </a>
             </div>
@@ -120,7 +117,7 @@
                   <div class="hover-text"><h3>Selection Sorting Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/sortingAlgorithm/selectionsort.jpg" alt="" />
+                  <img src="./Images/sortingAlgorithm/selectionsort.jpg" alt="Selection Sort" />
                 </div>
               </a>
             </div>
@@ -150,7 +147,7 @@
                   <div class="hover-text"><h3>Bubble Sort Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/sortingAlgorithm/bubblesort.jpg" alt="" />
+                  <img src="./Images/sortingAlgorithm/bubblesort.jpg" alt="bubblesort" />
                 </div>
               </a>
             </div>
@@ -160,7 +157,7 @@
                   <div class="hover-text"><h3>Stack Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/dataStructure/stack.jpeg" alt="" />
+                  <img src="./Images/dataStructure/stackd.jpeg" alt="" />
                 </div>
               </a>
             </div>
@@ -170,7 +167,7 @@
                   <div class="hover-text"><h3>Qeue Algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/dataStructure/queue.jpg" alt="" />
+                  <img src="./Images/dataStructure/queue.jpg" alt="" />
                 </div>
               </a>
             </div>
@@ -180,7 +177,7 @@
                   <div class="hover-text"><h3>Bfs</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/graphtravarsal/bfs.png" alt="" />
+                  <img src="./Images/graphtravarsal/bfs.png" alt="" />
                 </div>
               </a>
             </div>
@@ -190,7 +187,7 @@
                   <div class="hover-text"><h3>Dfs</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/graphtravarsal/dfs.jpg" alt="" />
+                  <img src="./Images/graphtravarsal/dfs.jpg" alt="" />
                 </div>
               </a>
             </div>
@@ -200,7 +197,7 @@
                   <div class="hover-text"><h3>Shortest Path algorithm</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/pathfinding/sssp.png" alt="" />
+                  <img src="./Images/pathfinding/sssp.png" alt="" />
                 </div>
               </a>
             </div>
@@ -210,7 +207,7 @@
                   <div class="hover-text"><h3>convex hall</h3></div>
                 </div>
                 <div class="item-img">
-                  <img src="../Images/graphtravarsal/dfs.jpg" alt="" />
+                  <img src="./Images/graphtravarsal/dfs.jpg" alt="" />
                 </div>
               </a>
             </div>
@@ -254,8 +251,8 @@
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/mixitup.min.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="./js/mixitup.min.js"></script>
+    <script src="./js/custom.js"></script>
     <script>
       var containerEl = document.querySelector(".mix-container");
 
