--- a/sort/merge.html
+++ b/sort/merge.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Bar container here the sort bar will be generated -->
     <div id="sort-bar"></div>
     <canvas id="canvas"></canvas>
 
     <script src="/js/buildBar.js"></script>
     <script src="/js/mergesort.js"></script>
-</body>
+  </body>
 </html>
