--- a/graph/graph.html
+++ b/graph/graph.html
@@ -43,9 +43,9 @@
       grid["4"] = [[5, 2]];
 
       let graph = new buildGraph(graphInfob, grid);
-      var steps = graph.getWeightedDijkstraSteps(1, 5);
+      //var steps = graph.getWeightedDijkstraSteps(1, 5);
 
-      //var steps = graph.getWeightedDFS(1, 5);
+      var steps = []; //graph.getUnWeightedBfsSteps(1, 5);
 
       //var steps = graph.getWeightedBFS(1, 5);
 
