--- a/UI/Pages/about.html
+++ b/UI/Pages/about.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>ProjectDaVisualizer</title>
-    <meta name="description" content="ProjectDaVisualizer/team Portolio" />
+    <meta name="description" content="ProjectDaVisualizer/team Portfolio" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700"
