--- a/sort/merge.html
+++ b/sort/merge.html
@@ -11,7 +11,7 @@
     <div id="sort-bar"></div>
     <canvas id="canvas"></canvas>
 
-    <script src="/js/buildBar.js"></script>
-    <script src="/js/mergesort.js"></script>
+    <script src="../js/buildBar.js"></script>
+    <script src="../js/mergesort.js"></script>
   </body>
 </html>
