--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
-    <header class="container-fluid vs-container">
+    <header class="container-fluid vs-container" id="header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">ProjectDaVisualizer</a>
         <button
@@ -218,7 +218,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer>
+    <footer id="footer">
       <div class="container-fluid">
         <div class="footer-info">
           <div class="footer-title">
@@ -236,6 +236,11 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+</script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
