--- a/graph/index.html
+++ b/graph/index.html
@@ -58,7 +58,7 @@
         <div class="mx-auto container">
             <div class="flex justify-between items-center px-4 py-2">
                 <div class="flex items-center">
-                    <h1 class="font-bold text-2xl ml-2">VisualAlgorithm</h1>
+                    <a href="../index.html"><h1 class="font-bold text-2xl ml-2">VisualAlgorithm</h1></a>
                 </div>
                 <div class="flex items-center space-x-2">
                     <div class="font-bold text-lg">
