--- a/graph/graph_new.html
+++ b/graph/graph_new.html
@@ -16,14 +16,139 @@
             border-radius: 6px;
         }
     </style>
+    <link rel="stylesheet" href="/CSS/sort.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
+
+        body {
+            font-family: "IBM Plex Mono", monospace;
+        }
+    </style>
+    <style>
+        #grid {
+            border: 1px solid rgb(24, 179, 114);
+
+            display: grid;
+        }
+
+        .cell {
+            border: 1px solid #e6eff6;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .control {
+            padding: 10px;
+            background: #afd8f8;
+            border: 1px solid #afd8f8;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 1px 1px 1px 1px #afd8f8;
+        }
+
+        #editor {
+         min-height: 400px;
+            min-width: 100%;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Raleway:100,300,400,600,700"
+          rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+          integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<div id="container"></div>
 
+<nav class="shadow bg-white">
+    <div class="mx-auto container">
+        <div class="flex justify-between items-center px-4 py-2">
+            <div class="flex items-center">
+                <a href="../index.html"><h1 class="font-bold text-2xl ml-2">VisualAlgorithm</h1></a>
+            </div>
+            <div class="flex items-center space-x-2">
+                <div class="font-bold text-lg">
+                    <label>Select Algorithm</label>
+                    <select id="selectAlgorithm"
+                            class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2">
+                        <option value="">Select An Algorithm</option>
+                        <option value="bubbleSort">Bubble Sort</option>
+                        <option value="selectionSort">Selection Sort</option>
+                        <option value="insertionSort">Insertion Sort</option>
+                    </select>
+                </div>
+
+                <button id="start"
+                        class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg">
+                    Visualize
+                </button>
+                <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg">
+                    Visualize
+                </button>
+
+                <div>
+                    <!-- Button for creating random array -->
+                    <button type="button" id="randomArray"
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">
+                        Random Array
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="shadow grid grid-cols-12 space-x-2">
+    <div class="col-span-2">
+        <!-- Take Graph  Input and generate from Here -->
+        <div class="bg-white border border-gray-400 rounded-lg shadow-md px-4 py-2">
+            <div id="editor"></div>
+        </div>
+    </div>
+    <div class="col-span-10">
+        <div id="container"></div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./js/grid.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.9.6/ace.js" integrity="sha512-czfWedq9cnMibaqVP2Sw5Aw1PTTabHxMuTOkYkL15cbCYiatPIbxdV0zwhfBZKNODg0zFqmbz8f7rKmd6tfR/Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="../js/priorityQueue.js"></script>
 <script type="text/javascript" src="../js/buildGraph.js"></script>
 <script type="text/javascript" src="../js/visualizeGraphAlog.js"></script>
 <script type="text/javascript">
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/twilight");
+ //   editor.session.setMode("ace/mode/algorithm");
+    document.getElementById('editor').style.fontSize='19px';
+    editor.setOptions({
+        enableBasicAutocompletion: true,
+        enableLiveAutocompletion: true
+    });
+    var currentValue = editor.getValue();
+    var newNode={};
+    editor.on('change', function (delta) {
+       //get value type
+        var value = editor.getValue();
+        console.log(value);
+
+
+    });
+
+    editor.session.on('change', function(delta) {
+        var text = editor.getValue();
+
+        // delta.start, delta.end, delta.lines, delta.action
+      //  console.log(delta.start, delta.end, delta.lines, delta.action);
+    });
+    $('#start').click(function () {
+        var text = editor.getValue();
+
+
+    });
+
     let graphInfob = {
         edgeColor: "#548694",
         isDirected: true,
@@ -45,7 +170,7 @@
     let graph = new buildGraph(graphInfob, grid);
     //var steps = graph.getWeightedDijkstraSteps(1, 5);
 
-    //var steps = graph.getWeightedDFS(1, 5);
+    var steps = graph.getUnWeightedDfsSteps(1, 5);
 
     //var steps = graph.getWeightedBFS(1, 5);
 
@@ -68,7 +193,7 @@
     };
 
     let visDfs = new visualizeGraphAlog(steps, "#FF0AB1", "#548694", true);
-    visDfs.init(container, graph.getGraph(), options);
+   visDfs.init(container, graph.getGraph(), options);
 
     let isFirstStep = true;
 
